# Sample-Project

./: .gitignore  pyproject.toml
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/prisma/: db.sqlite  dev.db  schema.prisma
backend/prisma/migrations/20260131105840_init/: migration.sql
backend/prisma/migrations/20260202145404_init/: migration.sql
backend/src/: server.js
backend/src/config/: initAdmin.js  swagger.js
backend/src/controllers/: auth.controller.js  post.controller.js
backend/src/errors/: AppError.js
backend/src/middleware/: auth.js  authorize.js  errorHandler.js  rateLimiter.js  validate.js
backend/src/repositories/: IRepository.js  PostRepository.js  UserRepository.js
backend/src/routes/: auth.routes.js  post.routes.js
backend/src/schemas/: auth.schema.js  post.schema.js
backend/src/services/: auth.service.js  authorization.service.js  post.service.js
backend/src/utils/: jwt.js  sanitize.js
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CreatePost.jsx  Dashboard.jsx  EditPost.jsx  Home.jsx  Login.jsx  PostDetail.jsx  Register.jsx  ViewPost.jsx
src/chroma_store/: chroma.sqlite3
src/retrieval_pipeline/: config.py  display.py  loaders.py  main.py  pipeline.py  splitters.py  vectorstore.py
